--- a/test/UnitTests/RealWorldOne.KittenGenerator.UnitTests/RealWorldOne.KittenGenerator.UnitTests.csproj
+++ b/test/UnitTests/RealWorldOne.KittenGenerator.UnitTests/RealWorldOne.KittenGenerator.UnitTests.csproj
@@ -7,16 +7,27 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1"/>
-        <PackageReference Include="xunit" Version="2.4.1"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3"/>
-        <PackageReference Include="coverlet.collector" Version="1.3.0"/>
-        <PackageReference Include="FluentAssertions" Version="5.10.3"/>
-        <PackageReference Include="Moq" Version="4.16.0"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+        <PackageReference Include="xunit" Version="2.4.1" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
+        <PackageReference Include="coverlet.collector" Version="1.3.0" />
+        <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="Moq" Version="4.16.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\src\KittenGenerator\RealWorldOne.KittenGenerator.Api\RealWorldOne.KittenGenerator.Api.csproj"/>
+        <ProjectReference Include="..\..\..\src\KittenGenerator\RealWorldOne.KittenGenerator.Api\RealWorldOne.KittenGenerator.Api.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="UseCases\GetRandomKittenImage\cat.jfif" />
+      <Content Include="UseCases\GetRandomKittenImage\cat.jfif">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="UseCases\GetRandomKittenImage\cat_rotated.jfif" />
+      <Content Include="UseCases\GetRandomKittenImage\cat_rotated.jfif">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
