--- a/src/UserManagement/RealWorldOne.UserManagement.Api/RealWorldOne.UserManagement.Api.csproj
+++ b/src/UserManagement/RealWorldOne.UserManagement.Api/RealWorldOne.UserManagement.Api.csproj
@@ -15,4 +15,21 @@
       <ProjectReference Include="..\RealWorldOne.UserManagement.Infrastructure\RealWorldOne.UserManagement.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="appsettings.Development.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
+      <Content Update="appsettings.Production.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="UseCases\GetUser\ByEmail" />
+      <Folder Include="UseCases\GetUser\ByUserId" />
+      <Folder Include="UseCases\ListUsers" />
+      <Folder Include="UseCases\LoginUser" />
+      <Folder Include="UseCases\LogoutUser" />
+    </ItemGroup>
+
 </Project>
