--- a/src/UserManagement/RealWorldOne.UserManagement.Application/RealWorldOne.UserManagement.Application.csproj
+++ b/src/UserManagement/RealWorldOne.UserManagement.Application/RealWorldOne.UserManagement.Application.csproj
@@ -5,6 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="9.0.0" />
+        <PackageReference Include="FluentValidation" Version="9.5.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
       <Folder Include="Common" />
       <Folder Include="UseCases\GetUser\ByEmail" />
       <Folder Include="UseCases\GetUser\ByUserId" />
