--- a/test/UnitTests/RealWorldOne.UserManagement.UnitTests/RealWorldOne.UserManagement.UnitTests.csproj
+++ b/test/UnitTests/RealWorldOne.UserManagement.UnitTests/RealWorldOne.UserManagement.UnitTests.csproj
@@ -7,16 +7,24 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
-        <PackageReference Include="xunit" Version="2.4.1" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="1.3.0">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1"/>
+        <PackageReference Include="xunit" Version="2.4.1"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3"/>
+        <PackageReference Include="coverlet.collector" Version="1.3.0"/>
+        <PackageReference Include="FluentAssertions" Version="5.10.3"/>
+        <PackageReference Include="Moq" Version="4.16.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="UseCases\GetUser\ByEmail"/>
+        <Folder Include="UseCases\GetUser\ByUserId"/>
+        <Folder Include="UseCases\ListUsers"/>
+        <Folder Include="UseCases\LoginUser"/>
+        <Folder Include="UseCases\LogoutUser"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\src\UserManagement\RealWorldOne.UserManagement.Api\RealWorldOne.UserManagement.Api.csproj"/>
     </ItemGroup>
 
 </Project>
