--- a/src/UserManagement/RealWorldOne.UserManagement.Api/RealWorldOne.UserManagement.Api.csproj
+++ b/src/UserManagement/RealWorldOne.UserManagement.Api/RealWorldOne.UserManagement.Api.csproj
@@ -5,13 +5,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="5.6.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.3" />
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\RealWorldOne.UserManagement.Application\RealWorldOne.UserManagement.Application.csproj" />
       <ProjectReference Include="..\RealWorldOne.UserManagement.Infrastructure\RealWorldOne.UserManagement.Infrastructure.csproj" />
     </ItemGroup>
 
