--- a/src/UserManagement/RealWorldOne.UserManagement.Application/RealWorldOne.UserManagement.Application.csproj
+++ b/src/UserManagement/RealWorldOne.UserManagement.Application/RealWorldOne.UserManagement.Application.csproj
@@ -11,13 +11,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Common" />
       <Folder Include="UseCases\GetUser\ByEmail" />
       <Folder Include="UseCases\GetUser\ByUserId" />
       <Folder Include="UseCases\ListUsers" />
       <Folder Include="UseCases\LoginUser" />
       <Folder Include="UseCases\LogoutUser" />
-      <Folder Include="UseCases\AddUser" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RealWorldOne.UserManagement.Domain\RealWorldOne.UserManagement.Domain.csproj" />
     </ItemGroup>
 
 </Project>
