Huge commit including
- Implement login use case
- Add unit tests
- Add access token generator

--- a/src/UserManagement/RealWorldOne.UserManagement.Api/appsettings.Development.json
+++ b/src/UserManagement/RealWorldOne.UserManagement.Api/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AuthenticationSettings": {
+    "Secret": "aGVsbG9mcmVzaGdvX2JlX3Rlc3Q=",
+    "Iss": "localhost",
+    "Aud": "Ilker Tasatan",
+    "AuthenticationScheme": "realworldone"
   }
 }
