--- a/src/UserManagement/RealWorldOne.UserManagement.Api/appsettings.Production.json
+++ b/src/UserManagement/RealWorldOne.UserManagement.Api/appsettings.Production.json
@@ -1,9 +1,15 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
+  },
+  "AuthenticationSettings": {
+    "Secret": "aGVsbG9mcmVzaGdvLXByb2R1Y3Rpb24tZW52",
+    "Iss": "localhost",
+    "Aud": "Ilker Tasatan",
+    "AuthenticationScheme": "realworldone"
+  }
 }
