--- a/src/UserManagement/RealWorldOne.UserManagement.Application/RealWorldOne.UserManagement.Application.csproj
+++ b/src/UserManagement/RealWorldOne.UserManagement.Application/RealWorldOne.UserManagement.Application.csproj
@@ -14,12 +14,18 @@
       <Folder Include="UseCases\GetUser\ByEmail" />
       <Folder Include="UseCases\GetUser\ByUserId" />
       <Folder Include="UseCases\ListUsers" />
-      <Folder Include="UseCases\LoginUser" />
       <Folder Include="UseCases\LogoutUser" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\RealWorldOne.UserManagement.Domain\RealWorldOne.UserManagement.Domain.csproj" />
+      <ProjectReference Include="..\RealWorldOne.UserManagement.Infrastructure\RealWorldOne.UserManagement.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Options, Version=5.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\5.0.0\ref\net5.0\Microsoft.Extensions.Options.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
