--- a/src/UserManagement/RealWorldOne.UserManagement.Infrastructure/RealWorldOne.UserManagement.Infrastructure.csproj
+++ b/src/UserManagement/RealWorldOne.UserManagement.Infrastructure/RealWorldOne.UserManagement.Infrastructure.csproj
@@ -6,6 +6,7 @@
     
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
     </ItemGroup>
 
     <ItemGroup>
