Implement authentication into kitten generator api

--- a/src/KittenGenerator/RealWorldOne.KittenGenerator.Api/appsettings.Development.json
+++ b/src/KittenGenerator/RealWorldOne.KittenGenerator.Api/appsettings.Development.json
@@ -8,5 +8,11 @@
   },
   "Cataas": {
     "ApiUrl": "https://cataas.com/cat"
+  },
+  "AuthenticationSettings": {
+    "Secret": "aGVsbG9mcmVzaGdvX2JlX3Rlc3Q=",
+    "Iss": "localhost",
+    "Aud": "Ilker Tasatan",
+    "AuthenticationScheme": "realworldone-dev"
   }
 }
