--- a/src/KittenGenerator/RealWorldOne.KittenGenerator.Api/appsettings.Production.json
+++ b/src/KittenGenerator/RealWorldOne.KittenGenerator.Api/appsettings.Production.json
@@ -8,5 +8,11 @@
   },
   "Cataas": {
     "ApiUrl": "https://cataas.com/cat"
+  },
+  "AuthenticationSettings": {
+    "Secret": "aGVsbG9mcmVzaGdvLXByb2R1Y3Rpb24tZW52",
+    "Iss": "localhost",
+    "Aud": "Ilker Tasatan",
+    "AuthenticationScheme": "realworldone-prod"
   }
 }
