--- a/test/IntegrationTests/RealWorldOne.KittenGenerator.IntegrationTests/RealWorldOne.KittenGenerator.IntegrationTests.csproj
+++ b/test/IntegrationTests/RealWorldOne.KittenGenerator.IntegrationTests/RealWorldOne.KittenGenerator.IntegrationTests.csproj
@@ -12,10 +12,12 @@
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
         <PackageReference Include="coverlet.collector" Version="1.3.0" />
         <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\src\KittenGenerator\RealWorldOne.KittenGenerator.Api\RealWorldOne.KittenGenerator.Api.csproj" />
+      <ProjectReference Include="..\..\..\src\UserManagement\RealWorldOne.UserManagement.Infrastructure\RealWorldOne.UserManagement.Infrastructure.csproj" />
     </ItemGroup>
     
 </Project>
