Fix swagger and authentication middleware issue

--- a/src/UserManagement/RealWorldOne.UserManagement.Api/appsettings.Development.json
+++ b/src/UserManagement/RealWorldOne.UserManagement.Api/appsettings.Development.json
@@ -10,6 +10,6 @@
     "Secret": "aGVsbG9mcmVzaGdvX2JlX3Rlc3Q=",
     "Iss": "localhost",
     "Aud": "Ilker Tasatan",
-    "AuthenticationScheme": "realworldone"
+    "AuthenticationScheme": "realworldone-dev"
   }
 }
