--- a/src/UserManagement/RealWorldOne.UserManagement.Api/appsettings.Production.json
+++ b/src/UserManagement/RealWorldOne.UserManagement.Api/appsettings.Production.json
@@ -10,6 +10,6 @@
     "Secret": "aGVsbG9mcmVzaGdvLXByb2R1Y3Rpb24tZW52",
     "Iss": "localhost",
     "Aud": "Ilker Tasatan",
-    "AuthenticationScheme": "realworldone"
+    "AuthenticationScheme": "realworldone-prod"
   }
 }
