--- a/src/KittenGenerator/RealWorldOne.KittenGenerator.Api/RealWorldOne.KittenGenerator.Api.csproj
+++ b/src/KittenGenerator/RealWorldOne.KittenGenerator.Api/RealWorldOne.KittenGenerator.Api.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="System.Drawing.Common" Version="5.0.1" />
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
     </ItemGroup>
 
     <ItemGroup>
