--- a/src/UserManagement/RealWorldOne.UserManagement.Infrastructure/RealWorldOne.UserManagement.Infrastructure.csproj
+++ b/src/UserManagement/RealWorldOne.UserManagement.Infrastructure/RealWorldOne.UserManagement.Infrastructure.csproj
@@ -7,10 +7,11 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="5.0.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\RealWorldOne.UserManagement.Domain\RealWorldOne.UserManagement.Domain.csproj" />
     </ItemGroup>
-
+    
 </Project>
