--- a/src/UserManagement/RealWorldOne.UserManagement.Application/RealWorldOne.UserManagement.Application.csproj
+++ b/src/UserManagement/RealWorldOne.UserManagement.Application/RealWorldOne.UserManagement.Application.csproj
@@ -8,6 +8,8 @@
         <PackageReference Include="MediatR" Version="9.0.0" />
         <PackageReference Include="FluentValidation" Version="9.5.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="5.0.3" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
     </ItemGroup>
 
     <ItemGroup>
